test/error/LexLiteralStringEndOfLine.ci
public static class Test
{
	public static bool Run()
	{
		string s = "//ERROR: Unterminated string literal
		;
		return true;
	}
}
